--- a/all.css
+++ b/all.css
@@ -42,6 +42,27 @@ main > * {
 	padding: 1em;
 }
 
+#chessHistory [data-type="move"]:before {
+	/*color: #33c;*/
+	font-weight: 600;
+}
+#chessHistory [data-type="move"][data-fullmove-number]:first-child:before,
+#chessHistory [data-type="move"][data-fullmove-number][data-color="w"]:before,
+#chessHistory [data-has-children] + [data-type="move"][data-fullmove-number]:before {
+	content: attr(data-fullmove-number) '.\00a0';
+}
+#chessHistory [data-type="move"][data-fullmove-number][data-color="b"]:first-child:before,
+#chessHistory [data-has-children] + [data-type="move"][data-fullmove-number][data-color="b"]:before {
+	content: attr(data-fullmove-number) '...\00a0';
+}
+
+#chessHistory [data-type="move"] {
+	white-space: nowrap;
+}
+#chessHistory [data-type="move"] > :first-child ~ * {
+	white-space: normal;
+}
+
 #chessHistory:focus,
 #chessHistory [data-type="move"] > button:first-child:focus {
 	outline: none;
